# function-tracer

./: CMakeLists.txt
doc/: uml.dia
includes/: Argument.h  ElfParser.h  ElfPortability.h  Function.h  MemoryManager.h  ParseStabs.h  Process.h  StringToType.hpp  Tracer.h  Type.h  TypeToString.hpp  portability.h
src/: Argument.cpp  ElfParser.cpp  ElfParserUtils.cpp  Function.cpp  MemoryManager.cpp  ParseStabs.cpp  Process.cpp  Tracer.cpp  Type.cpp  main.cpp
test/: CMakeLists.txt  defines.h  t-opcodes_by_cmd.cpp  t-opcodes_by_pid.cpp  t-subject.c  t-test1.c  t-test2.c  t-test3.c  t-test4.c
